# Academic-AI

./: README.md  project.py  pyproject.toml  qnetwork.h5  qnetwork.pth  requirement.txt  study.txt  study_Schedule.txt
Reference algorithm/task-scheduling-main/: main.py  pandas_line_chart.xlsx  ~$pandas_line_chart.xlsx
data-parsing/: syllabus.py  tables.py
data_aquiatation/: csv_extract.py  data.csv
pdf_scrapping/: detect.py  np.py  train.py
scheduling algo 1/: README.md  main.py
scheduling algo 2/: algo.py
